--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 #=====================================
 # SPRING SECURITY
 #=====================================
-#http port 4443
-server.port=8443
+#http port 4444
+server.port=8444
 #=====================================
 # SSL
 #=====================================
@@ -23,7 +23,7 @@ jwt.header.string=Authorization
 #=====================================
 #       EUREKA DISCOVERY Client
 #=====================================
-spring.application.name=anodiam-jwt-auth
+spring.application.name=anodiam-student-signup
 #=====================================
 # DATA SOURCE
 #=====================================
