--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 	<artifactId>StudentSignup</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>StudentSignup</name>
-	<description>Student Signup Webservice</description>
+	<description>Student Signup REST API</description>
 	<packaging>jar</packaging>
 	<properties>
 		<java.version>11</java.version>
