--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,13 @@
 			<artifactId>spring-context-support</artifactId>
 		</dependency>
 
+		<!--Google Cloud-->
+		<dependency>
+			<groupId>com.google.cloud</groupId>
+			<artifactId>spring-cloud-gcp-secretmanager</artifactId>
+			<version>3.1.0</version>
+		</dependency>
+
 		<!--  MySQL  -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
