SignUp Service passed all Junit Tests 12/04/2022
SignUp Service passed all Junit Tests 12/04/2022

--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,8 @@
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>2.5.2</version>
-		<relativePath/> <!-- lookup parent from repository -->
+		<relativePath/>
+		<!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.anodiam.services</groupId>
 	<artifactId>StudentSignup</artifactId>
@@ -69,13 +70,6 @@
 			<artifactId>java-jwt</artifactId>
 			<version>3.4.1</version>
 		</dependency>
-
-		<!-- netflix-eureka-client -->
-<!--		<dependency>-->
-<!--			<groupId>org.springframework.cloud</groupId>-->
-<!--			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>-->
-<!--			<version>3.0.3</version>-->
-<!--		</dependency>-->
 
 		<!--  Test  -->
 		<dependency>
