--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,7 @@
 #=====================================
 # SPRING SECURITY
 #=====================================
-#http port 4444
 server.port=8444
-#=====================================
-# SSL
-#=====================================
-#server.ssl.enable=true
-#server.ssl.key-store: src/main/resources/bootsecurity.p12
-#server.ssl.key-store-password: allswell1A$
-#server.ssl.keyStoreType: PKCS12
-#server.ssl.keyAlias: bootsecurity
 #=====================================
 # Bcrypt & JWT
 #=====================================
@@ -28,8 +19,9 @@ spring.application.name=anodiam-microservice001-student-signup
 # DATA SOURCE
 #=====================================
 # Configurations for the database connection
-#spring.datasource.url=jdbc:mysql://35.238.186.50:3306/anodiam_student_db
-spring.datasource.url=jdbc:mysql://localhost:3306/anodiam_student_db?useSSL=false
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/anodiam_student
+#spring.datasource.url=jdbc:mysql://34.121.233.93:3306/anodiam_student
+# _db?useSSL=false
 # Username and secret
 spring.datasource.username=anodiam_user
 spring.datasource.password=Anodiam@123
