--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,8 +19,8 @@ spring.application.name=anodiam-microservice001-student-signup
 # DATA SOURCE
 #=====================================
 # Configurations for the database connection
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/anodiam_student
 #spring.datasource.url=jdbc:mysql://34.121.233.93:3306/anodiam_student
+spring.datasource.url=jdbc:mysql://localhost:3306/anodiamstudent
 # _db?useSSL=false
 # Username and secret
 spring.datasource.username=anodiam_user
