--- a/pom.xml
+++ b/pom.xml
@@ -90,9 +90,16 @@
 	<build>
 		<plugins>
 			<plugin>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-maven-plugin</artifactId>
-				<version>2.5.2</version>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-jar-plugin</artifactId>
+				<configuration>
+					<archive>
+						<manifest>
+							<addClassPath>true</addClassPath>
+							<mainClass>com.anodiam.StudentSignup.StudentSignupApplication</mainClass>
+						</manifest>
+					</archive>
+				</configuration>
 			</plugin>
 		</plugins>
 		<finalName>microservice001-student-signup</finalName>
