--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,31 +1,24 @@
 #=====================================
-# SPRING SECURITY
+# SPRING BOOT
 #=====================================
-server.port=8444
+spring.application.name=anodiam-microservice001-student-signup
 #=====================================
 # Bcrypt & JWT
 #=====================================
-bCrypt.strength=14
-bCrypt.salt=Comple#$alt
-jwt.secret=6omple*5ecr3t
+bCrypt.strength=${BCRYPT_STRENGTH:14}
+bCrypt.salt=${BCRYPT_SALT:Comple#$alt}
+jwt.secret=${JWT_SECRET:6omple*5ecr3t}
 jwt.expiration.milliseconds=864000000
 jwt.token.prefix=Bearer 
 jwt.header.string=Authorization
 #=====================================
-#       EUREKA DISCOVERY Client
-#=====================================
-spring.application.name=anodiam-microservice001-student-signup
-#=====================================
 # DATA SOURCE
 #=====================================
 # Configurations for the database connection
-#spring.datasource.url=jdbc:mysql://34.121.233.93:3306/anodiam_student
-spring.datasource.url=jdbc:mysql://localhost:3306/anodiamstudent
-# _db?useSSL=false
-# Username and secret
-spring.datasource.username=anodiam_user
-spring.datasource.password=Anodiam@123
-# Keep the connection alive if idel for a long time
+spring.datasource.url=jdbc:mysql://${DATA_URL:localhost}:${DATA_PORT:3306}/${DATA_DB:anodiamstudent}
+spring.datasource.username=${DATA_USER:anodiam_user}
+spring.datasource.password=${DATA_PASS:Anodiam@123}
+# Keep the connection alive if idle for a long time
 spring.datasource.dbcp2.test-while-idle=true
 spring.datasource.dbcp2.validation-query=SELECT 1
 #=====================================
