--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,21 +9,28 @@ bCrypt.strength=${BCRYPT_STRENGTH:14}
 bCrypt.salt=${BCRYPT_SALT:Comple#$alt}
 jwt.secret=${JWT_SECRET:6omple*5ecr3t}
 jwt.expiration.milliseconds=864000000
-jwt.token.prefix=Bearer 
+jwt.token.prefix=Bearer
 jwt.header.string=Authorization
 #=====================================
 # DATA SOURCE
 #=====================================
 # Configurations for the database connection
-spring.datasource.url=jdbc:mysql://${DATA_URL:localhost}:${DATA_PORT:3306}/${DATA_DB:anodiamstudent}
-spring.datasource.username=${DATA_USER:anodiam_user}
-spring.datasource.password=${DATA_PASS:Anodiam@123}
-# Keep the connection alive if idle for a long time
-spring.datasource.dbcp2.test-while-idle=true
-spring.datasource.dbcp2.validation-query=SELECT 1
+## PostgreSQL
+spring.datasource.url=jdbc:postgresql://localhost:5432/anodiam
+spring.datasource.username=anodiam_user
+spring.datasource.password=Anodiam@123
+
 #=====================================
 # JPA HIBERNATE
 #=====================================
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+
+## default connection pool
+spring.datasource.hikari.connectionTimeout=20000
+spring.datasource.hikari.maximumPoolSize=5
+
+
+
